interview for jvm