@@ -10,6 +10,11 @@ sourceSets{
             srcDirs 'build/generated/source/proto/main/java'
         }
     }
+    test{
+        java{
+            srcDirs 'src/test/java'
+        }
+    }
 }
 
 dependencies {
@@ -21,6 +26,11 @@ dependencies {
 //    @javax.annotation.Generated
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
 
+    implementation 'org.apache.arrow:arrow-flight:11.0.0'
+    implementation 'org.apache.arrow:flight-core:11.0.0'
+    implementation 'org.apache.arrow:arrow-vector:11.0.0'
+    implementation 'org.apache.arrow:arrow-memory-netty:11.0.0'
+
     // protobuf 生成 grpc-java的相关依赖
 //    implementation("io.grpc:protoc-gen-grpc-java:1.49.2")
     // grpc
@@ -29,6 +39,7 @@ dependencies {
 
 tasks.test {
     useJUnitPlatform()
+    jvmArgs("--add-opens=java.base/java.nio=ALL-UNNAMED")
 }
 
 protobuf {
